2003-04-23  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/sp-color-slider.c (sp_color_slider_paint): Use proper style painters,
	so Gdk/Gtk crash bug does not show up anymore

	* src/xml/repr-io.c (sp_repr_read_file): Substitute entities (by MentaL)
	(sp_repr_read_mem): Ditto

	* src/style.c (sp_style_merge_from_style_string): Complain only if not the end
	of the style string (thanks to MenTaL)

2003-04-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_module_print_plain_begin): Magic by MenTaL

	* src/libnr/nr-svp-uncross.c (nr_svp_uncross_full): Works properly now for
	all stress-tests except zap.

2003-04-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Switch fill
	completely to new renderer
	(nr_arena_shape_render): Ditto, but use masks as before

	* src/libnr/nr-svp-uncross.c (nr_svp_uncross_full): Pass most stress-tests

2003-04-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_pixblock_render_svp_mask_or): new method
	(nr_pixblock_render_svp_rgba): Frontend, implement for all pixblock modes
	(nr_svp_run_A8_OR): Run callback implementation
	(nr_svp_run_R8G8B8): Ditto
	(nr_svp_run_R8G8B8A8P_EMPTY): Ditto
	(nr_svp_run_R8G8B8A8P_R8G8B8A8P): Ditto
	(nr_svp_run_R8G8B8A8N_R8G8B8A8N): Ditto
	(nr_svp_render): Implement using generic run callbacks

2003-04-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_pixblock_render_svp_rgba): Do runs properly,
	skip if coverage stays 0

2003-04-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c: Moved here from old arena code

	* src/libnr/nr-svp-render.h: Ditto

	* src/libnr/nr-svp.c: Ditto

	* src/libnr/nr-svp.h: Ditto

	* src/display/nr-arena-shape.h: Optional experimental new renderer

	* src/libnrtype/nr-typeface.h: Port to NRObject

	* src/display/canvas-arena.c (sp_canvas_arena_init): Use active object
	listener instead of g-signals